<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- String com o nome do Aplicativo -->
    <string name="app_name">Experimento</string>

    <!-- Strings comuns -->
    <string name="progress_aguarde">Aguarde&#8230;</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="msg_erro_rest">Ocorreu um erro inesperado.</string>

    <string name="msg_criado_sucesso">Conteúdo Educacional criado com sucesso.</string>
    <string name="msg_alterado_sucesso">Conteúdo Educacional alterado com sucesso.</string>
    <string name="msg_descartado_sucesso">Conteúdo Educacional descartado com sucesso.</string>
    <string name="msg_alert">Alerta!</string>
    
    <string name="msg_campo_obrigatorio">Este campo é obrigatório</string>
    <string name="msg_campo_url_invalido">Esta URL é inválida</string>
    <string name="msg_confirm_excluir">Este Conteúdo Educacional será descartado. Deseja confirmar?</string>

    
    
    <!-- Strings fluxos -->
    <string name="action_incluir">Incluir</string>
    <string name="action_editar">Editar</string>
    <string name="action_excluir">Excluir</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_educational_content_item">EducationalContentItemActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_educational_content">EducationalContentActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_salvar">Salvar</string>
    <string name="hint_titulo">Título</string>
    <string name="hint_url_video">URL do Vídeo</string>
    <string name="hint_nota_rodape">Nota de Rodapé</string>
    <string name="hint_pagina">Página</string>
    
    
    
    

</resources>
