<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="br.com.cast.android.exp.EducationalContentActivity" >

        <EditText
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:maxLength="100"
            android:hint="@string/hint_titulo" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/txtUrl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:maxLength="255"
            android:hint="@string/hint_url_video" >

        </EditText>
        
        <EditText
            android:id="@+id/txtNotaRodape"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLength="100"
            android:ems="10"
            android:hint="@string/hint_nota_rodape" >

        </EditText>

        <EditText
            android:id="@+id/txtPagina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_pagina"
            android:inputType="number" />
        
        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/action_salvar" />
        
    </LinearLayout>

</ScrollView>